--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
+    "quill": "^1.3.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.3.1",
+    "react-quill": "^1.3.5",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
